Fix tags on mobile

--- a/src/containers/farming/list/structures/list-item/list-item.module.scss
+++ b/src/containers/farming/list/structures/list-item/list-item.module.scss
@@ -23,9 +23,27 @@
 }
 
 .itemLeftHeader {
-  display: flex;
-  align-items: center;
+  display: grid;
   column-gap: 5px;
+  grid-template-columns: repeat(2, min-content);
+  grid-template-rows: repeat(2, min-content);
+  align-items: center;
+}
+
+.tagsWithTooltip {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  column-gap: 8px;
+  grid-column: 1 / 2;
+  margin-top: 8px;
+}
+
+.iconWithStatusLabel {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  column-gap: 8px;
 }
 
 .tooltip {
@@ -84,9 +102,7 @@
       background-color: $text-02;
     }
   }
-
 }
-
 
 @include media(">phone", "<Lphone") {
   .stats {
@@ -230,5 +246,11 @@
 
   .button {
     width: 160px;
+  }
+
+  .tagsWithTooltip {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    margin-top: 0;
   }
 }
